--- a/roles/cart/templates/cart.service.j2
+++ b/roles/cart/templates/cart.service.j2
@@ -2,9 +2,9 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=REDIS_HOST
-Environment=CATALOGUE_HOST=CATALOGUE_HOST
-Environment=CATALOGUE_PORT=8080
+Environment=REDIS_HOST={{REDIS_HOST}}
+Environment=CATALOGUE_HOST={{CATALOGUE_HOST}}
+Environment=CATALOGUE_PORT=80
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
 
